online/src/worker/legacy/zomic/ZomicParser.js
// Generated from /Users/vorth/vZome/vzome-all/core/src/main/antlr/com/vzome/core/grammar/zomic/ZomicParser.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import ZomicParserListener from './ZomicParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class ZomicParser extends antlr4.Parser {

    static grammarFileName = "ZomicParser.g4";
    static literalNames = [ null, "'label'", "'scale'", "'build'", "'move'", 
                            "'rotate'", "'around'", "'reflect'", "'from'", 
                            "'symmetry'", "'through'", "'center'", "'repeat'", 
                            "'branch'", "'save'", "'location'", "'orientation'", 
                            "'all'", "'half'", "'size'", "'short'", "'medium'", 
                            "'long'", "'green'", "'orange'", "'purple'", 
                            "'black'", "'red'", "'pent'", "'pentagon'", 
                            "'blue'", "'rect'", "'rectangle'", "'yellow'", 
                            "'tri'", "'triangle'", "'{'", "'}'", "'('", 
                            "')'", "'?'" ];
    static symbolicNames = [ null, "LABEL", "SCALE", "BUILD", "MOVE", "ROTATE", 
                             "AROUND", "REFLECT", "FROM", "SYMMETRY", "THROUGH", 
                             "CENTER", "REPEAT", "BRANCH", "SAVE", "LOCATION", 
                             "ORIENTATION", "ALL", "HALF", "SIZE", "SHORT", 
                             "MEDIUM", "LONG", "GREEN", "ORANGE", "PURPLE", 
                             "BLACK", "RED", "PENT", "PENTAGON", "BLUE", 
                             "RECT", "RECTANGLE", "YELLOW", "TRI", "TRIANGLE", 
                             "LBRACE", "RBRACE", "LPAREN", "RPAREN", "QUESTIONMARK", 
                             "WS", "EOL", "INT", "POLARITY", "SL_COMMENT", 
                             "ML_COMMENT", "IDENT", "UNEXPECTED_CHAR" ];
    static ruleNames = [ "program", "stmt", "compound_stmt", "directCommand", 
                         "nestedCommand", "strut_stmt", "label_stmt", "scale_stmt", 
                         "build_stmt", "move_stmt", "rotate_stmt", "reflect_stmt", 
                         "from_stmt", "symmetry_stmt", "repeat_stmt", "branch_stmt", 
                         "save_stmt", "strut_length_expr", "size_expr", 
                         "algebraic_number_expr", "explicit_size_expr", 
                         "named_size_expr", "symmetry_center_expr", "axis_expr", 
                         "axis_index_expr", "axis_name_expr", "red_alias_expr", 
                         "blue_alias_expr", "yellow_alias_expr", "green", 
                         "orange", "purple", "black" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = ZomicParser.ruleNames;
        this.literalNames = ZomicParser.literalNames;
        this.symbolicNames = ZomicParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, ZomicParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294734782) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 2079) !== 0)) {
	            this.state = 66;
	            this.stmt();
	            this.state = 71;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 72;
	        this.match(ZomicParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	stmt() {
	    let localctx = new StmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, ZomicParser.RULE_stmt);
	    try {
	        this.state = 77;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	        case 7:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 43:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 74;
	            this.directCommand();
	            break;
	        case 8:
	        case 9:
	        case 12:
	        case 13:
	        case 14:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 75;
	            this.nestedCommand();
	            break;
	        case 36:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 76;
	            this.compound_stmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	compound_stmt() {
	    let localctx = new Compound_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, ZomicParser.RULE_compound_stmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79;
	        this.match(ZomicParser.LBRACE);
	        this.state = 83;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 4294734782) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 2079) !== 0)) {
	            this.state = 80;
	            this.stmt();
	            this.state = 85;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 86;
	        this.match(ZomicParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directCommand() {
	    let localctx = new DirectCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, ZomicParser.RULE_directCommand);
	    try {
	        this.state = 95;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 43:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 88;
	            this.strut_stmt();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 89;
	            this.rotate_stmt();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 90;
	            this.reflect_stmt();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 91;
	            this.scale_stmt();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 92;
	            this.build_stmt();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 93;
	            this.move_stmt();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 94;
	            this.label_stmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nestedCommand() {
	    let localctx = new NestedCommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, ZomicParser.RULE_nestedCommand);
	    try {
	        this.state = 102;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 97;
	            this.from_stmt();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 98;
	            this.branch_stmt();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 99;
	            this.repeat_stmt();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 100;
	            this.symmetry_stmt();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 101;
	            this.save_stmt();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	strut_stmt() {
	    let localctx = new Strut_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, ZomicParser.RULE_strut_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.strut_length_expr();
	        this.state = 105;
	        this.axis_expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	label_stmt() {
	    let localctx = new Label_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, ZomicParser.RULE_label_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this.match(ZomicParser.LABEL);
	        this.state = 108;
	        this.match(ZomicParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scale_stmt() {
	    let localctx = new Scale_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, ZomicParser.RULE_scale_stmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(ZomicParser.SCALE);
	        this.state = 111;
	        localctx.scale = this.match(ZomicParser.INT);
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 112;
	            this.match(ZomicParser.LPAREN);
	            this.state = 114;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===43) {
	                this.state = 113;
	                this.algebraic_number_expr();
	            }

	            this.state = 116;
	            this.match(ZomicParser.RPAREN);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	build_stmt() {
	    let localctx = new Build_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, ZomicParser.RULE_build_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 119;
	        this.match(ZomicParser.BUILD);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	move_stmt() {
	    let localctx = new Move_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, ZomicParser.RULE_move_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.match(ZomicParser.MOVE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rotate_stmt() {
	    let localctx = new Rotate_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, ZomicParser.RULE_rotate_stmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 123;
	        this.match(ZomicParser.ROTATE);
	        this.state = 125;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 124;
	            localctx.steps = this.match(ZomicParser.INT);
	        }

	        this.state = 127;
	        this.match(ZomicParser.AROUND);
	        this.state = 128;
	        this.axis_expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	reflect_stmt() {
	    let localctx = new Reflect_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, ZomicParser.RULE_reflect_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(ZomicParser.REFLECT);
	        this.state = 131;
	        this.symmetry_center_expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	from_stmt() {
	    let localctx = new From_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, ZomicParser.RULE_from_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(ZomicParser.FROM);
	        this.state = 134;
	        this.stmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	symmetry_stmt() {
	    let localctx = new Symmetry_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, ZomicParser.RULE_symmetry_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(ZomicParser.SYMMETRY);
	        this.state = 140;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 6:
	        	this.state = 137;
	        	this.match(ZomicParser.AROUND);
	        	this.state = 138;
	        	this.axis_expr();
	        	break;
	        case 10:
	        	this.state = 139;
	        	this.symmetry_center_expr();
	        	break;
	        case 1:
	        case 2:
	        case 3:
	        case 4:
	        case 5:
	        case 7:
	        case 8:
	        case 9:
	        case 12:
	        case 13:
	        case 14:
	        case 18:
	        case 19:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 36:
	        case 43:
	        	break;
	        default:
	        	break;
	        }
	        this.state = 142;
	        this.stmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	repeat_stmt() {
	    let localctx = new Repeat_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, ZomicParser.RULE_repeat_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.match(ZomicParser.REPEAT);
	        this.state = 145;
	        localctx.count = this.match(ZomicParser.INT);
	        this.state = 146;
	        this.stmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	branch_stmt() {
	    let localctx = new Branch_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, ZomicParser.RULE_branch_stmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this.match(ZomicParser.BRANCH);
	        this.state = 149;
	        this.stmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	save_stmt() {
	    let localctx = new Save_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, ZomicParser.RULE_save_stmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        this.match(ZomicParser.SAVE);
	        this.state = 152;
	        localctx.state = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 229388) !== 0))) {
	            localctx.state = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 153;
	        this.stmt();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	strut_length_expr() {
	    let localctx = new Strut_length_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, ZomicParser.RULE_strut_length_expr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        this.size_expr();
	        this.state = 157;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 156;
	            this.algebraic_number_expr();
	        }

	        this.state = 160;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18) {
	            this.state = 159;
	            this.match(ZomicParser.HALF);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	size_expr() {
	    let localctx = new Size_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, ZomicParser.RULE_size_expr);
	    try {
	        this.state = 164;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 19:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 162;
	            this.explicit_size_expr();
	            break;
	        case 18:
	        case 20:
	        case 21:
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 43:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 163;
	            this.named_size_expr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	algebraic_number_expr() {
	    let localctx = new Algebraic_number_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, ZomicParser.RULE_algebraic_number_expr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 166;
	        localctx.ones = this.match(ZomicParser.INT);
	        this.state = 168;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 167;
	            localctx.phis = this.match(ZomicParser.INT);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	explicit_size_expr() {
	    let localctx = new Explicit_size_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, ZomicParser.RULE_explicit_size_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(ZomicParser.SIZE);
	        this.state = 173;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 43:
	            this.state = 171;
	            localctx.scale = this.match(ZomicParser.INT);
	            break;
	        case 40:
	            this.state = 172;
	            localctx.isVariableLength = this.match(ZomicParser.QUESTIONMARK);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	named_size_expr() {
	    let localctx = new Named_size_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, ZomicParser.RULE_named_size_expr);
	    try {
	        this.state = 179;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 20:
	            localctx = new SizeShortContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 175;
	            this.match(ZomicParser.SHORT);
	            break;
	        case 22:
	            localctx = new SizeLongContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 176;
	            this.match(ZomicParser.LONG);
	            break;
	        case 21:
	            localctx = new SizeMediumContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 177;
	            this.match(ZomicParser.MEDIUM);
	            break;
	        case 18:
	        case 23:
	        case 24:
	        case 25:
	        case 26:
	        case 27:
	        case 28:
	        case 29:
	        case 30:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	        case 35:
	        case 43:
	            localctx = new SizeMediumContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	symmetry_center_expr() {
	    let localctx = new Symmetry_center_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, ZomicParser.RULE_symmetry_center_expr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(ZomicParser.THROUGH);
	        this.state = 187;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	            this.state = 182;
	            this.match(ZomicParser.CENTER);
	            break;
	        case 30:
	        case 31:
	        case 32:
	        case 43:
	            this.state = 184;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 30)) & ~0x1f) === 0 && ((1 << (_la - 30)) & 7) !== 0)) {
	                this.state = 183;
	                this.blue_alias_expr();
	            }

	            this.state = 186;
	            localctx.blueAxisIndexNumber = this.match(ZomicParser.INT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	axis_expr() {
	    let localctx = new Axis_exprContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, ZomicParser.RULE_axis_expr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.axis_name_expr();
	        this.state = 190;
	        localctx.index = this.axis_index_expr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


